setup git hooks, prettier, eslint

--- a/package.json
+++ b/package.json
@@ -49,10 +49,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "eject": "react-scripts eject",
+    "eslint:run": "eslint --max-warnings=0 --ignore-path .gitignore --ext .js,.ts,.tsx .",
+    "eslint:fix": "npm run eslint:run -- --fix"
   },
   "browserslist": {
     "production": [
@@ -66,7 +65,20 @@
       "last 1 safari version"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "devDependencies": {
-    "i18n-extract": "^0.6.7"
+    "eslint": "^7.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react-app": "^6.2.2",
+    "husky": "^4.2.5",
+    "i18n-extract": "^0.6.7",
+    "lint-staged": "^10.2.10",
+    "prettier": "^2.0.5"
   }
 }
