--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "dompurify": "^2.0.10",
     "focus-visible": "^5.1.0",
     "framer-motion": "^2.0.0-beta.55",
-    "history": "^5.0.0-beta.9",
+    "history": "^5.0.0",
     "lodash.debounce": "^4.0.8",
     "polished": "^3.6.5",
     "react": "^0.0.0-experimental-33c3af284",
@@ -39,8 +39,8 @@
     "react-icons": "^3.9.0",
     "react-query": "^1.2.1",
     "react-query-devtools": "^1.1.3",
-    "react-router": "^0.0.0-experimental-b1ff171f",
-    "react-router-dom": "^0.0.0-experimental-b1ff171f",
+    "react-router": "^6.0.0-alpha.5",
+    "react-router-dom": "^6.0.0-alpha.5",
     "react-scripts": "3.4.1",
     "theme-ui": "^0.3.1",
     "typescript": "^3.8.3"
