--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "react-icons": "^3.9.0",
     "react-query": "^1.2.1",
     "react-query-devtools": "^1.1.3",
-    "react-router": "^6.0.0-alpha.5",
-    "react-router-dom": "^6.0.0-alpha.5",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "3.4.1",
     "theme-ui": "^0.3.1",
     "typescript": "^3.8.3"
