use react@latest

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "history": "^5.0.0",
     "lodash.debounce": "^4.0.8",
     "polished": "^3.6.5",
-    "react": "^0.0.0-experimental-33c3af284",
-    "react-dom": "^0.0.0-experimental-33c3af284",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-error-boundary": "^2.2.1",
     "react-helmet-async": "^1.0.6",
     "react-icons": "^3.9.0",
