--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-helmet": "^5.0.15",
     "@types/react-query": "^1.1.1",
     "@types/styled-components": "^5.0.1",
+    "@vercel/node": "^1.7.1",
     "dompurify": "^2.0.10",
     "focus-visible": "^5.1.0",
     "framer-motion": "^2.0.0-beta.55",
